fix: placeholder minutes input

--- a/popup/index.html
+++ b/popup/index.html
@@ -41,7 +41,7 @@
   <div class="form-wait-time">
     <h3 style="color: #f3f3f3">Select for how long will you be waiting:</h1>
     <div style="display:flex;">
-      <input class="form-control" id="minutes_input" placeholder="10">
+      <input class="form-control" id="minutes_input" placeholder="10 (minutes)">
       <button id="submit_button" class="btn btn-default pt-4" style="margin-left: 12px;">Submit</button>
     </div>
   </div>
